# multiphaseLB

./: CMakeLists.txt  README.md
docs/: .gitignore  CMakeLists.txt  Doxyfile  Makefile  conf.py.in  index.rst  make.bat
docs/_build/doctrees/: environment.pickle  index.doctree  test.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js  test.html
docs/source/: conf.py  equations.rst  index.rst  myMRTCollision.rst  myMRTModel.rst
docs/source/dataTypes/: EOSInfo.rst  basicMesh.rst  dataTypes.rst  latticeInfo.rst  latticeMesh.rst  lbeField.rst  macroFields.rst  mpiInfo.rst  timeInfo.rst  vtkInfo.rst
src/: CMakeLists.txt
src/EOS/: CMakeLists.txt  EOSInfo.h  T_eos.c  T_eos.h  p_eos.c  p_eos.h  readEOSInfo.c  readEOSInfo.h  rhoFromEOS.c  rhoFromEOS.h
src/IO/: CMakeLists.txt  createLbeField.c  createLbeField.h  createScalarField.c  createScalarField.h  createVectorField.c  createVectorField.h  io.h  lookUpDoubleEntry.c  lookUpStringEntry.c  openFile.c  readBasicMesh.c  readBasicMesh.h  readLatticeMesh.c  readLatticeMesh.h  readLbeField.c  readLbeField.h  readScalarField.c  readScalarField.h  readTimeInfo.c  readTimeInfo.h  readVTKInfo.c  readVTKInfo.h  readVectorField.c  readVectorField.h  writeBasicMesh.c  writeBasicMesh.h  writeLatticeMesh.c  writeLatticeMesh.h  writeMeshToVTK.c  writeMeshToVTK.h  writePdfToVTK.c  writePdfToVTK.h  writeScalarField.c  writeScalarField.h  writeScalarToVTK.c  writeScalarToVTK.h  writeVTKExtra.c  writeVTKExtra.h  writeVectorField.c  (+3 more)
src/IO/asciiRaw/: CMakeLists.txt  asciiRaw.h  writeArrayToAsciiRaw.c  writeArrayToAsciiRaw.h  writeScalarToAsciiRaw.c  writeScalarToAsciiRaw.h
src/IO/basicInfo/: readEOSInfo.c  readEOSInfo.h
src/IO/binaryRaw/: CMakeLists.txt  binaryRaw.h  readArrayFromBinaryRaw.c  readArrayFromBinaryRaw.h  readScalarFromBinaryRaw.c  readScalarFromBinaryRaw.h  writeArrayToBinaryRaw.c  writeArrayToBinaryRaw.h  writeScalarToBinaryRaw.c  writeScalarToBinaryRaw.h
src/IO/ensight/: CMakeLists.txt  ensight.h  readArrayFromEnsight.c  readLbeFieldFromEnsight.c  readLbeFieldFromEnsight.h  readScalarFromEnsight.c  readScalarFromEnsight.h  readVectorFromEnsight.c  readVectorFromEnsight.h  timeToIndex.c  timeToIndex.h  updateCaseFile.c  updateCaseFile.h  writeLbeFieldToEnsight.c  writeLbeFieldToEnsight.h  writeMeshToEnsight.c  writeMeshToEnsight.h  writeScalarToEnsight.c  writeScalarToEnsight.h  writeVectorToEnsight.c  writeVectorToEnsight.h
src/IO/fileSearch/: entryIsPresent.c  entryIsPresent.h  entryList.c  entryList.h  lookUpDouble.c  lookUpDouble.h  lookUpEntry.c  lookUpEntry.h  lookUpString.c  lookUpString.h  lookUpVector.c  lookUpVector.h  singleEntryList.c  singleEntryList.h  subEntryList.c  subEntryList.h  tokenize.c  tokenize.h
src/IO/pvtu/: CMakeLists.txt  pvtu.h  readArrayFromPvtu.c  readArrayFromPvtu.h  readScalarFromPvtu.c  readScalarFromPvtu.h  writeArrayToPvtu.c  writeArrayToPvtu.h  writeMainPvd.c  writeMainPvd.h  writeMeshToPvtu.c  writeMeshToPvtu.h  writePvtuExtra.c  writePvtuExtra.h  writeScalarToPvtu.c  writeScalarToPvtu.h
src/IO/time/: readDataFormat.c  readDataFormat.h  timeOptions.c  timeOptions.h
src/applications/: CMakeLists.txt
src/applications/fields/: CMakeLists.txt
src/applications/mesh/: CMakeLists.txt
src/applications/solvers/: CMakeLists.txt
src/basic/: CMakeLists.txt  averageScalarField.c  averageScalarField.h  basic.h  errorMsg.c  errorMsg.h  int2dArray.c  int2dArray.h  matVecMult.c  matVecMult.h  matrixDoubleAlloc.c  matrixDoubleAlloc.h  matrixIntAlloc.c  matrixIntAlloc.h  recvPdfField.c  recvPdfField.h  sendPdfField.c  sendPdfField.h  sparseMatVecMult.c  sparseMatVecMult.h  syncPdfField.c  syncPdfField.h  syncScalarField.c  syncScalarField.h  syncVectorField.c  syncVectorField.h  testFile.c  testFile.h  vectorMag2.c  vectorMag2.h  vstring.c  vstring.h
src/boundary/: CMakeLists.txt  bdParam.h  bdType.h  boundary.h
src/boundary/bounceBack/: bounceBack.c  bounceBack.h
src/boundary/fixedEOSp/: fixedEOSp.c  fixedEOSp.h  fixedEOSpParam.h
src/boundary/fixedGradT/: fixedGradT.c  fixedGradT.h  fixedGradTParam.h  readFixedGradTParam.c  readFixedGradTParam.h
src/boundary/fixedRandomT/: fixedRandomT.c  fixedRandomT.h  fixedRandomTParam.h  readFixedRandomTParam.c  readFixedRandomTParam.h
src/boundary/fixedT/: fixedT.c  fixedT.h  fixedTParam.h  readFixedTParam.c  readFixedTParam.h
src/boundary/fixedU/: fixedU.c  fixedU.h  fixedUParam.h  readFixedUParam.c  readFixedUParam.h
src/boundary/outflow/: outflow.c  outflow.h
src/boundary/uniformHeatFlux/: uHeatFluxParam.h  uniformHeatFlux.c  uniformHeatFlux.h
src/dataTypes/: EOSInfo.h  basicMesh.h  dataTypes.h  latticeInfo.h  latticeMesh.h  lbeField.h  macroFields.h  mpiInfo.h  timeInfo.h  vtkInfo.h
src/dictIO/: CMakeLists.txt  bracedEntry.c  bracedEntry.h  dictIO.h  dictionary.h  isBracedEntryDefined.c  isBracedEntryDefined.h  lookUpEntry.c  lookUpEntry.h  lookUpIntegerEntry.c  lookUpIntegerEntry.h  lookUpScalarEntry.c  lookUpScalarEntry.h  lookUpStringEntry.c  lookUpStringEntry.h  lookUpStringList.c  lookUpStringList.h  lookUpVectorEntry.c  lookUpVectorEntry.h  openDict.c  openDict.h  singleEntry.c  singleEntry.h  tokenize.c  tokenize.h
src/dictIO/old/: entryList.c  entryList.h  lookUpDouble.c  lookUpDoubleEntry.h  lookUpEntry.h  lookUpString.c  lookUpString.h  lookUpStringEntry.h  lookUpVector.c  lookUpVector.h  (+2 more)
src/finiteDifference/: CMakeLists.txt  finiteDifference.h  invScalarGradient.c  invScalarGradient.h  scalarGradient.c  scalarGradient.h  vectorDivergence.c  vectorDivergence.h
src/latticeModel/: CMakeLists.txt  MRTInvMatrix.c  MRTInvMatrix.h  MRTMatrix.c  MRTMatrix.h  cs2.c  cs2.h  latticeD.c  latticeD.h  latticeModel.h  latticeQ.c  latticeQ.h  latticeReverseDir.c  latticeReverseDir.h  latticeVelocities.c  latticeVelocities.h  latticeWeights.c  latticeWeights.h  ppWeights.c  ppWeights.h  setLatticeInfo.c  setLatticeInfo.h
src/lbEquation/: CMakeLists.txt  lbEquation.h  lbParameters.h  lbeModel.h
src/test/: CMakeLists.txt  test1.c  test2.c  test3.c  test4.c
(+565 files in other folders)
