# Input/output library
add_subdirectory (IO)

# Dictionary entry
add_subdirectory (dictIO)

# lattice Models library
add_subdirectory (latticeModel)

# Basic library. C operations
add_subdirectory (basic)

# Lattice-Boltzmann equations and models
add_subdirectory (lbEquation)

# # finite difference differential operations
# add_subdirectory (finiteDifference)



# # Applications
# add_subdirectory (applications)

# Tests
add_subdirectory (test)
