# Basic LBE library. Used as model caller
add_subdirectory (general)

# Pseudo-potential basics
add_subdirectory (pseudoPot)

# Li MRT Model
add_subdirectory (liMRTModel)

# Li SRT Model
add_subdirectory (liSRTModel)

# Li Temperature Model
add_subdirectory (liTempModel)

# # new Temperature Model
# add_subdirectory (newTempModel)

# new MRT Temperature model
add_subdirectory (myMRTModel)
