# Basic LBE library. Used as model caller
add_subdirectory (general)

# Pseudo-potential basics
add_subdirectory (pseudoPot)

# Li MRT Model
add_subdirectory (liMRTModel)

# Xu MRT Model
add_subdirectory (xuMRTModel)

# Li Temperature Model
add_subdirectory (liTempMRTModel)

# new MRT Temperature model
add_subdirectory (myMRTModel)
